slides 1 and 2 done

--- a/nanopolish/nanopolish.html
+++ b/nanopolish/nanopolish.html
@@ -28,8 +28,8 @@
 
         <!-- =========== SLIDE 1 Title =========== -->
         <section>
-            <h3 class="title">Nanopolish</h3>
-            <p>https://github.com/jts/nanopolish</p>
+            <h2 class="title">Nanopolish</h2>
+            <p><a href="https://github.com/jts/nanopolish" target="_blank">https://github.com/jts/nanopolish</a></p>
             <p>
                 <small>Author: Jared Simpson</small>
             </p>
@@ -37,18 +37,14 @@
 
         <!-- =========== SLIDE 2 Key Message =========== -->
         <section>
-            <div class="header">
-                <h2>Key Message</h2>
-            </div>
-            <div class="fragment">
-                <p>
-                    Strong compression of haplotype data
-                </p>
-                <p>
-                    Speed up haplotype matching by factor of
-                    $M$
-                </p>
-            </div>
+            <p>
+                Software tool for using signal-level nanopore data to: <br>
+                <ul>
+                    <li>Improve a consensus sequence</li>
+                    <li>Call variants</li>
+                    <li>Detect methylated bases</li>
+                </ul>
+            </p>
         </section>
 
         <!-- =========== SLIDE 3 Core Messages =========== -->
