first hmm profile slide

--- a/nanopolish/nanopolish.html
+++ b/nanopolish/nanopolish.html
@@ -147,25 +147,24 @@
             </section>
         </section>
 
-        <!-- =========== SLIDE 4 Section 2.1 =========== -->
-        <section class="slide4">
+        <!-- =========== SLIDE 5 HMM Profile =========== -->
+        <section>
 
-            <!-- 4A -->
-            <section class="slide4a">
-                <h4 class="header">Section 2.1 - Derivation of prefix arrays</h4>
-                <p>
-                    $a_k$ is an array containing the ordering of
-                    sequences for the given $k$
-                </p>
-                <p class="example">
-                    0011010 <strong>1</strong> 00 <br>
-                    11<span>11010</span> <strong>1</strong> 11 <br>
-                    11111<span>10</span> <strong>1</strong> 00 <br>
-                </p>
-                <p>
-                    So here, $a_7 = [0,1,2]$ <br>
-                    Whereas $a_9 = [0,2,1]$
-                </p>
+            <!-- 5A -->
+            <section>
+                <h3 class="header">HMM Profile</h3>
+                <div id="hmm_wrap">
+                    <div class="hmm">
+                        <img src="imgs/hmm.png" alt="HMM">
+                    </div>
+                    <div class="hmm">
+                        <p>
+                            $E$ states are split events. <br> <br>
+                            $K$ states are skip events. <br> <br>
+                            $M$ states are normal movement to next k-mer.
+                        </p>
+                    </div>
+                </div>
             </section>
 
             <!-- 4B -->
