change id to class

--- a/nanopolish/nanopolish.html
+++ b/nanopolish/nanopolish.html
@@ -153,7 +153,7 @@
             <!-- 5A -->
             <section>
                 <h3 class="header">HMM Profile</h3>
-                <div id="hmm_wrap">
+                <div class="hmm_wrap">
                     <div class="hmm">
                         <img src="imgs/hmm.png" alt="HMM">
                     </div>
@@ -170,7 +170,7 @@
             <!-- 5B -->
             <section>
                 <h3 class="header">HMM Profile - Transition Probabilities</h3>
-                <div id="hmm_wrap">
+                <div class="hmm_wrap">
                     <div class="hmm">
                         <img src="imgs/hmm.png" alt="HMM">
                     </div>
@@ -200,7 +200,7 @@
             <!-- 5C -->
             <section>
                 <h3 class="header">HMM Profile - Transition Probabilities</h3>
-                <div id="hmm_wrap">
+                <div class="hmm_wrap">
                     <div class="hmm">
                         <img src="imgs/hmm.png" alt="HMM">
                     </div>
